--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD Pipeline for Django REST API with Docker
 
 on:
   push:
@@ -9,48 +9,100 @@ on:
       - main
 
 jobs:
+  test:
+    runs-on: ubuntu-latest  # Runner OS
+
+    steps:
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Python
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.9'  # Adjust to the Python version you're using
+
+      # Step 3: Install dependencies
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      # Step 4: Set up environment variables for MongoDB (MongoDB Atlas)
+      - name: Set environment variables
+        run: echo "DATABASE_URL=mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority" >> $GITHUB_ENV
+
+      # Step 5: Run Django migrations (if applicable)
+      - name: Run Django migrations
+        run: |
+          python manage.py migrate
+
+      # Step 6: Run tests (using Django’s test runner or pytest)
+      - name: Run tests
+        run: |
+          python manage.py test  # or use pytest if you prefer
+
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-latest  # Runner OS
+    needs: test  # Only run if the tests pass
 
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      # Step 2: Set up Docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Install Dependencies
-      run: |
-        cd app
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+      # Step 3: Build Docker image from Dockerfile
+      - name: Build Docker image
+        run: |
+          docker build -t my-django-app .
 
-    - name: Run Tests
-      run: |
-        cd app
-        python manage.py test
-
-  docker-build:
-    runs-on: ubuntu-latest
-    needs: build
-
-    steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
-
-    - name: Build Docker Image
-      run: |
-        docker build -t local-django-app:${{ github.sha }} .
+      # Step 4: Optionally run Docker container locally for testing
+      - name: Run Docker container locally (Optional)
+        run: |
+          docker run -d -p 8000:8000 my-django-app
+          # Verify the app is running (Optional)
+          curl --fail http://localhost:8000 || exit 1
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: docker-build
+    runs-on: ubuntu-latest  # Runner OS
+    needs: build  # Only run if build job succeeds
+    environment:
+      name: production  # GitHub environment, can be changed to "staging" or others
 
     steps:
-    - name: Deploy Locally (Simulated)
-      run: |
-        docker stop local-django-container || true
-        docker rm local-django-container || true
-        docker run -d --name local-django-container -p 8000:8000 local-django-app:${{ github.sha }}
+      # Step 1: Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      # Step 2: Set up Docker Buildx
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      # Step 3: Login to Docker Hub (Replace with your Docker Hub credentials in GitHub secrets)
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Tag the Docker image
+      - name: Tag Docker image
+        run: |
+          docker tag my-django-app:latest your-dockerhub-username/my-django-app:latest
+
+      # Step 5: Push Docker image to Docker Hub (or other container registries like AWS ECR)
+      - name: Push Docker image to Docker Hub
+        run: |
+          docker push your-dockerhub-username/my-django-app:latest
+
+      # Step 6: Simulate deployment (dummy check since no cloud instance is available)
+      - name: Simulate deployment (dummy check)
+        run: |
+          echo "Simulating deployment... This step is a placeholder since no cloud instance is available."
+          echo "Docker image has been pushed to Docker Hub. Deployment is simulated successfully."
+
