--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -52,14 +52,14 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      # Step 2: Set up Docker
+      # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       # Step 3: Build Docker image from Dockerfile
       - name: Build Docker image
         run: |
-          docker build -t my-django-app .
+          docker build -t my-django-app:latest .
 
   deploy:
     runs-on: ubuntu-latest  # Runner OS
