--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -45,54 +45,60 @@ jobs:
 
   build:
     runs-on: ubuntu-latest  # Runner OS
-    needs: test  # Only run if the tests pass
-
+    needs: test  # Only run if tests pass
+  
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
-
-      # Step 2: Set up Docker Buildx
+  
+      # Step 2: Set up Docker Buildx (for multi-platform builds, optional)
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+  
       # Step 3: Build Docker image from Dockerfile
       - name: Build Docker image
         run: |
           docker build -t my-django-app:latest .
-
+          docker images  # This will print the list of images and verify the image was created
+  
   deploy:
     runs-on: ubuntu-latest  # Runner OS
-    needs: build  # Only run if build job succeeds
+    needs: build  # Only run if the build job succeeds
     environment:
       name: production  # GitHub environment, can be changed to "staging" or others
-
+  
     steps:
       # Step 1: Checkout the code
       - name: Checkout code
         uses: actions/checkout@v2
-
+  
       # Step 2: Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+  
       # Step 3: Login to Docker Hub (Replace with your Docker Hub credentials in GitHub secrets)
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      # Step 4: Tag the Docker image
+  
+      # Step 4: Check the list of Docker images (for debugging)
+      - name: List Docker images (for debugging)
+        run: docker images
+  
+      # Step 5: Tag the Docker image (this assumes the image was built in the build job)
       - name: Tag Docker image
         run: |
           docker tag my-django-app:latest soham508/my-django-app:latest
-
-      # Step 5: Push Docker image to Docker Hub (or other container registries like AWS ECR)
+  
+      # Step 6: Push Docker image to Docker Hub
       - name: Push Docker image to Docker Hub
         run: |
           docker push soham508/my-django-app:latest
-
+  
+  
       # Step 6: Simulate deployment (dummy check since no cloud instance is available)
       - name: Simulate deployment (dummy check)
         run: |
